Bump "Error Prone" to 2.0.15
and fix a few things :)