@@ -78,6 +78,7 @@ public class JMFInit extends Frame implements Runnable {
            */
     }
 
+    @Override
     public void run() {
         detectDirectAudio();
         detectS8DirectAudio();
@@ -108,7 +109,7 @@ public class JMFInit extends Frame implements Runnable {
         Class<?> dsauto;
         try {
             dsauto = Class.forName("DirectSoundAuto");
-            dsauto.newInstance();
+            dsauto.getConstructor().newInstance();
             message("Finished detecting DirectSound capturer");
         }
         catch (ThreadDeath td) {
@@ -121,7 +122,7 @@ public class JMFInit extends Frame implements Runnable {
         Class<?> jsauto;
         try {
             jsauto = Class.forName("JavaSoundAuto");
-            jsauto.newInstance();
+            jsauto.getConstructor().newInstance();
             message("Finished detecting javasound capturer");
         }
         catch (ThreadDeath td) {
@@ -194,7 +195,7 @@ public class JMFInit extends Frame implements Runnable {
             // Find the renderer class and instantiate it.
             cls = Class.forName(dar);
 
-            Renderer rend = (Renderer) cls.newInstance();
+            Renderer rend = (Renderer) cls.getConstructor().newInstance();
             try {
                 // Set the format and open the device
                 AudioFormat af = new AudioFormat(AudioFormat.LINEAR, 44100, 16,
@@ -239,7 +240,7 @@ public class JMFInit extends Frame implements Runnable {
             // Find the renderer class and instantiate it.
             cls = Class.forName(dar);
 
-            Renderer rend = (Renderer) cls.newInstance();
+            Renderer rend = (Renderer) cls.getConstructor().newInstance();
 
             if (rend instanceof ExclusiveUse
                     && !((ExclusiveUse) rend).isExclusive()) {
